fixing jump
fixing jump on lock

--- a/_common/styles/paidpost-v2.0.2.css
+++ b/_common/styles/paidpost-v2.0.2.css
@@ -6,6 +6,9 @@
 {
 	width:100%;
 	max-width:1605px;
+	/*Not a big fan of this but need to set a static height for the container and contents to match for lock to top*/
+	height:67px;
+
 }
 .paid-top-bar > div > *
 {
